introduce player stats object into API contract